# catsh

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  PKGBUILD  README.md  history.txt  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy.yml
assets/linux/: catsh.desktop
cli/: Cargo.toml  commands.rs  main.rs
cli/commands/: run.rs  shell.rs  start.rs
core/: Cargo.toml  colors.rs  dirs.rs  env.rs  lib.rs  logs.rs  prompt.rs
examples/: settings.toml
src/: commands.rs  main.rs  prompt.rs  utils.rs
src/commands/: run.rs  shell.rs  start.rs
src/utils/: dirs.rs  logs.rs
