[package]
name = "stellar-cli"
version = "0.1.0-alpha.1"
authors = ["Stellar authors"]
edition = "2018"
description = "A cross-platform shell."
readme = "../README.md"
repository = "https://github.com/jheysonsaav/stellar"
license = "GPL-2.0"
keywords = ["shell", "stellar", "windows", "linux", "macos"]
categories = ["command-line-interface", "command-line-utilities"]
default-run = "stellar"

[[bin]]
name = "stellar"
path = "main.rs"

[dependencies]
stellar-core = { path = "../core", version = "0.1.0-alpha.1" }
clap = "2.33.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"

[package.metadata.winres]
OriginalFilename = "stellar.exe"
LegalCopyright = "Copyright (C) stellar authors. All right reserved."
ProductName = "stellar"
FileDescription = "A cross-platform shell."