[package]
name = "stellar_cli"
version = "0.1.0-beta.0"
authors = ["Stellar authors"]
edition = "2018"
description = "🌟 A stellar cross-platform shell."
readme = "../README.md"
repository = "https://github.com/jheysonsaav/stellar"
license = "MIT"
keywords = ["shell", "stellar", "windows", "linux", "macos"]
categories = ["command-line-interface", "command-line-utilities"]
default-run = "stellar"

[[bin]]
name = "stellar"
path = "main.rs"

[dependencies]
stellar_core = { path = "../core", version = "0.1.0-beta.0" }
clap = "2.33.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"

[package.metadata.winres]
OriginalFilename = "stellar.exe"
LegalCopyright = "Copyright (C) Stellar authors. All right reserved."
ProductName = "Stellar"
FileDescription = "🌟 A stellar cross-platform shell."
