[package]
name = "catsh-cli"
version = "0.2.7-beta.0"
authors = ["Catsh authors"]
edition = "2018"
description = "A cross-platform shell."
readme = "../README.md"
repository = "https://github.com/jheysonsaav/catsh"
license = "MIT"
keywords = ["shell", "catsh", "windows", "linux", "macos"]
categories = ["command-line-interface", "command-line-utilities"]
default-run = "catsh"

[[bin]]
name = "catsh"
path = "main.rs"

[dependencies]
catsh-core = { path = "../core", version = "0.2.7-beta.0" }
clap = "2.33.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"

[package.metadata.winres]
OriginalFilename = "catsh.exe"
LegalCopyright = "Copyright (C) Catsh authors. All right reserved."
ProductName = "Catsh"
FileDescription = "A cross-platform shell."
