[package]
name = "stellar-core"
version = "0.1.0-alpha.1"
authors = ["Stellar authors"]
edition = "2018"
description = "A cross-platform shell."
readme = "../README.md"
repository = "https://github.com/jheysonsaav/stellar"
license = "GPL-2.0"
keywords = ["shell", "stellar", "windows", "linux", "macos"]
categories = ["command-line-interface", "command-line-utilities"]

[lib]
path = "lib.rs"

[dependencies]
rustyline = "8.0.0"
directories = "3.0.1"
termcolor = "1.1.2"
lazy_static = "1.4.0"
regex = "1.4.5"