[package]
name = "stellar_core"
version = "0.1.0-beta.0"
authors = ["Stellar authors"]
edition = "2018"
description = "🌟 A stellar cross-platform shell."
readme = "../README.md"
repository = "https://github.com/jheysonsaav/stellar"
license = "MIT"
keywords = ["shell", "stellar", "windows", "linux", "macos"]
categories = ["command-line-interface", "command-line-utilities"]

[lib]
name = "stellar_core"
path = "lib.rs"

[dependencies]
rustyline = "8.0.0"
colored = "2.0.0"
directories = "3.0.1"
