[package]
name = "catsh-core"
version = "0.2.0-beta.0"
authors = ["Catsh authors"]
edition = "2018"
description = "A cross-platform shell."
readme = "../README.md"
repository = "https://github.com/jheysonsaav/catsh"
license = "MIT"
keywords = ["shell", "catsh", "windows", "linux", "macos"]
categories = ["command-line-utilities"]

[lib]
path = "lib.rs"

[dependencies]
rustyline = "8.0.0"
colored = "2.0.0"
directories = "3.0.1"
toml = "0.5.8"
serde = { version = "1.0.125", features = ["derive"] }
